# lib

./: .gitignore  Cargo.toml  LICENSE  LRSBuild  LRSBuild1  MISSING  Makefile  README.adoc  README.md  TODO  VERSION.adoc  build_all.sh  build_asm.sh  build_plugin.sh  make_asm.sh  make_docs.sh  make_libtest.sh  make_lrs.sh  make_plugin.sh  targets.sh
Documentation/: Makefile  README.adoc
Documentation/adoc/: building_and_using.adoc  crates.adoc  cross_compiling.adoc  index.adoc  intro.adoc  markup.adoc  missing_features.adoc  on_unsafe.adoc  syscalls.adoc  undefined_operations.adoc  using_musl.adoc
asm/: Makefile
assets/: doc_style.css
bugs/: new.sh
bugs/open/: 0001-pod-should-be-unsafe.adoc  0002-vmsplice-cannot-be-used-with-immutable-slices.adoc
core/src/: alias.rs  string.rs
dev/: Cargo.toml
dir/src/: lib.rs
etc/: PKGBUILD  aarch64-lkern-kernel.json
examples/: Makefile
examples/src/: access.rs  allocators.rs.broken  args.rs  c_ptr_ptr.rs  calc.rs  caps.rs  cmsg.rs.broken  cpu.rs  cpumask.rs  cwd.rs  dir.rs  drop_clone.rs  exists.rs  fd.rs  file_info.rs  getopt.rs  hash.rs  hashmap.rs  helloworld.rs  ids.rs  inotify.rs  lock.rs  mode_parsing.rs  mount_tmpfs.rs  netlink.rs  numinfo.rs  parse.rs  path.rs  pipe.rs  poll.rs  real_path.rs  resource_limit.rs  sched.rs  socket_addr.rs  socket_recv.rs  socket_send.rs  sort.rs  taalloc.rs  test.rs  thread.rs  (+8 more)
file/: Cargo.toml
fs/: Cargo.toml
fs/src/: lib.rs
linux/: Cargo.toml  make_docs.sh
linux/assets/: doc_style.css
linux/src/: dir.rs  errno.rs  file.rs  fs.rs  group.rs  lib.rs  process.rs  result.rs  string.rs  user.rs
linux_clock/: Cargo.toml
linux_clock/src/: lib.rs
linux_core/: Cargo.toml
linux_core/src/: cty.rs  errno.rs  lib.rs  string.rs  util.rs
linux_dev/: Cargo.toml
linux_dev/src/: lib.rs
linux_dir/: Cargo.toml
linux_file/: Cargo.toml
linux_fs/: Cargo.toml
linux_fs/src/: lib.rs
linux_process/: Cargo.toml
linux_user_group/: Cargo.toml
process/: Cargo.toml
src/: dir.rs  env.rs  errno.rs  fd.rs  file.rs  fs.rs  group.rs  lib.rs  libc.rs  process.rs  result.rs  user.rs  util.rs
src/file/: Cargo.toml  file.rs  flags.rs  info.rs  lib.rs
src/file/src/: flags.rs  info.rs
src/linux/: Cargo.toml  alloc.rs  atomic.rs  clone.rs  cmp.rs  core.rs  dir.rs  env.rs  error.rs  fd.rs  file.rs  fmt.rs  fs.rs  group.rs  i16.rs  i32.rs  i64.rs  i8.rs  intrinsics.rs  io.rs  isize.rs  iter.rs  lib.rs  marker.rs  mem.rs  num.rs  ops.rs  option.rs  parse.rs  path.rs  poll.rs  process.rs  ptr.rs  rc.rs  repr.rs  result.rs  rmo.rs  share.rs  slice.rs  stdio.rs  (+13 more)
src/time_ext/: Cargo.toml  convert.rs  lib.rs  parse.rs
tests/: Makefile  file1.rs  lib.rs
(+710 files in other folders)
