[package]
name = "linux"
version = "0.1.0"
authors = [ "various" ]

[lib]
name = "linux"
path = "src/linux/lib.rs"

[features]
default = ["retry"]
retry = []

[dependencies.linux_file]
path = "src/file"

[dependencies.linux_user_group]
path = "src/user_group"

[dependencies.linux_core]
path = "src/core"

[dependencies.linux_dir]
path = "src/dir"

[dependencies.linux_fs]
path = "src/fs"

[dependencies.linux_process]
path = "src/process"
