[package]
name = "linux"
version = "0.1.0"
authors = [ "mahkoh" ]

[lib]
name = "linux"

[features]
default = ["retry"]
retry = []

[dev-dependencies]
rand = "*"

[dependencies.linux_file]
path = "../linux_file"

[dependencies.linux_user_group]
path = "../linux_user_group"

[dependencies.linux_core]
path = "../linux_core"

[dependencies.linux_dir]
path = "../linux_dir"

[dependencies.linux_fs]
path = "../linux_fs"

[dependencies.linux_process]
path = "../linux_process"
