[package]
name = "linux_file"
version = "0.1.0"
authors = [ "various" ]

[lib]
name = "linux_file"
path = "lib.rs"

[features]
default = ["retry"]
retry = []

[dependencies.linux_core]
path = "../core"

[dependencies.linux_dev]
path = "../dev"

[dependencies.linux_fs]
path = "../fs"

[dependencies.linux_time_base]
path = "../time_base"
