[package]
name = "linux"
version = "0.1.0"
authors = [ "mahkoh" ]

[lib]
name = "linux"

[features]
default = ["retry"]
retry = []

[dev-dependencies]
rand = "*"

[dependencies.linux_file]
path = "../file"

[dependencies.linux_user_group]
path = "../user_group"

[dependencies.linux_core]
path = "../core"

[dependencies.linux_dir]
path = "../dir"

[dependencies.linux_fs]
path = "../fs"

[dependencies.linux_process]
path = "../process"
