[package]
name = "linux_clock"
version = "0.1.0"
authors = [ "various" ]

[lib]
name = "linux_clock"
path = "lib.rs"

[features]
default = ["retry"]
retry = []

[dependencies.linux_file]
path = "../file"

[dependencies.linux_user_group]
path = "../user_group"

[dependencies.linux_core]
path = "../core"

[dependencies.linux_dir]
path = "../dir"

[dependencies.linux_fs]
path = "../fs"

[dependencies.linux_process]
path = "../process"
