[package]
name = "linux_time_ext"
version = "0.1.0"
authors = [ "various" ]

[lib]
name = "linux_time_ext"
path = "lib.rs"

[features]
default = ["retry"]
retry = []

[dependencies.linux_file]
path = "../file"

[dependencies.linux_core]
path = "../core"

[dependencies.linux_time_base]
path = "../time_base"
